--- a/HOME/.config/autostart/signal.desktop
+++ b/HOME/.config/autostart/signal.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Trayer
-Exec=/home/fred/.bin/trayer.sh
+Name=Signal
+Exec=/home/fred/.bin/signal.sh
 Terminal=false
 Type=Application
