--- a/HOME/.config/autostart/tresorit.desktop
+++ b/HOME/.config/autostart/tresorit.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Trayer
-Exec=/home/fred/.bin/trayer.sh
+Name=Tresorit
+Exec=/home/fred/.bin/tresorit.sh
 Terminal=false
 Type=Application
